# sophia_teamagent

./: .env.example  .gitignore  README.md  THIRD_PARTY_NOTICES.md  app.js  index.html  pyproject.toml  vercel.json
api/: index.py  legal_kb.sqlite  pyproject.toml  requirements.txt
docs/: harness_architecture.md
input/: company_brief.md
prompts/: delaware_c_corp_post_formation.txt
scripts/: build_web_legal_kb.py
src/legal_doc_agent/: __init__.py  __main__.py  agents.py  cli.py  config.py  deepseek.py  docx_writer.py  generation_service.py  google_doc_service.py  google_docs.py  harness.py  legal_kb.py  local_http.py  nvidia.py  prompts.py  run_events.py  web_generation.py  web_kb.py
tests/: test_agents.py  test_cli.py  test_deepseek_client.py  test_docx_writer.py  test_generation_service.py  test_google_doc_service.py  test_google_docs.py  test_harness.py  test_legal_kb.py  test_local_http.py  test_nvidia_client.py  test_prompts.py  test_ui_draft_generator.py  test_vercel_api.py  test_web_generation.py  test_web_kb.py
ui/: app.js  index.html  styles.css
