[project]
name = "legal-doc-agent"
version = "0.1.0"
description = "NVIDIA API-powered agent harness for generating Word legal-document packages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-docx>=1.1.0",
]

[project.scripts]
legal-doc-agent = "legal_doc_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
legal_doc_agent = ["py.typed"]
